# ISO-Framework

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  ISO_PRD-v1.5.md  LICENSE-APACHE  release.toml
.github/workflows/: ci.yml  release.yml  stress.yml
Docs/Dev/: RELEASING.md
_bmad-output/: architecture.md  prd.md  project-brief.md  readiness-checklist.md
_bmad-output/qa/: test-id-index.md  test-strategy.md
_bmad-output/stories/epic-1-foundation/: epic.md  story-1.1.md  story-1.10.md  story-1.11.md  story-1.12.md  story-1.13.md  story-1.14.md  story-1.2.md  story-1.3.md  story-1.4.md  story-1.5.md  story-1.6.md  story-1.7.md  story-1.8.md  story-1.9.md
_bmad-output/stories/epic-2-environment-lifecycle/: epic.md  story-2.1.md  story-2.10.md  story-2.2.md  story-2.3.md  story-2.4.md  story-2.5.md  story-2.6.md  story-2.7.md  story-2.8.md  story-2.9.md
_bmad-output/stories/epic-3-conflict-intelligence/: epic.md  story-3.1.md  story-3.2.md  story-3.3.md  story-3.4.md  story-3.5.md  story-3.6.md  story-3.7.md  story-3.8.md
_bmad-output/stories/epic-4-ecosystem-integration/: epic.md  story-4.1.md  story-4.2.md  story-4.3.md  story-4.4.md  story-4.5.md  story-4.6.md  story-4.7.md  story-4.8.md  story-4.9.md
docs/: index.html
iso-code/: Cargo.toml  README.md  release.toml
iso-code-cli/: Cargo.toml  README.md
iso-code-cli/src/: config.rs  main.rs
iso-code-cli/tests/: arg_count_validation.rs  hook_contract.rs  setup_flag.rs  version_compat_subprocess.rs
iso-code-mcp/: Cargo.toml  LICENSE-MIT  README.md  release.toml
iso-code-mcp/src/: main.rs
iso-code-mcp/tests/: mcp_contract.rs
iso-code/examples/: basic.rs  custom_config.rs  gc.rs
iso-code/src/: adapter.rs  error.rs  git.rs  guards.rs  lib.rs  lock.rs  manager.rs  ports.rs  state.rs  types.rs  util.rs
iso-code/src/adapters/: default.rs  mod.rs  shell_command.rs
iso-code/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
iso-code/tests/: concurrency.rs  guards_matrix.rs  proptest_porcelain.rs  regression.rs  shell_command_adapter.rs  stress_create_delete.rs  stress_gc_orphans.rs  type_system.rs  version_compat.rs
iso-code/tests/common/: mod.rs
iso-code/tests/fixtures/mock-git/: README.md  git-2.19  git-2.20  git-2.30  git-2.35  git-2.37  git-2.41  git-2.47
