[package]
name = "iso-code-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "CLI binary (wt) for iso-code worktree management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snehith/iso-code"
documentation = "https://docs.rs/iso-code-cli"
keywords = ["git", "worktree", "cli", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
iso-code = { version = "0.1.0", path = "../iso-code" }
dunce = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
