[package]
name = "iso-code-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "MCP server binary for iso-code worktree management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/snehith/iso-code"
documentation = "https://docs.rs/iso-code-mcp"
keywords = ["git", "worktree", "mcp", "ai"]
categories = ["development-tools", "development-tools::version-control"]

[dependencies]
iso-code = { version = "0.1.0", path = "../iso-code" }
dunce = "1.0"
jwalk = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
